# NeuralNetworkJPO

./: CMakeLists.txt  README.md
include/: Layer.hpp  NeuralNetwork.hpp  Neuron.hpp  main.hpp  utils.hpp
src/: Layer.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp  utils.cpp
